--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <meta name="theme-color" content="#002b36">
   <script src="main.js"></script>
 </head>
 <body>
